# my_quantum

./: pyproject.toml
src/my_quantum/: __init__.py  main.py  runner.py
src/my_quantum/deutsch/: __init__.py  check.py  circuit.py
src/my_quantum/deutsch_jozsa/: __init__.py  check.py  circuit.py
